[project]
name = "code-along"
version = "20240630.1"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "ruff>=0.5.0",
  "pre-commit>=3.7.1",
  "pytest>=8.2.2",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "B"] 

# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. 
docstring-code-format = false

# Set the line length limit used in docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes] 
docstring-quotes = "double"
